[gd_scene load_steps=2 format=3 uid="uid://cay2m6mcktqdw"]

[ext_resource type="Script" path="res://scripts/debug_ui.gd" id="1_mp4yj"]

[node name="DebugUILayer" type="CanvasLayer"]
script = ExtResource("1_mp4yj")

[node name="MenuBar" type="MenuBar" parent="."]
offset_right = 103.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelsMenu" type="PopupMenu" parent="MenuBar"]
unique_name_in_owner = true
title = "Levels"

[node name="EncountersMenu" type="PopupMenu" parent="MenuBar"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Encounters"

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.5
offset_right = 100.5
offset_bottom = 55.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
columns = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/GridContainer/MarginContainer"]
layout_mode = 2
columns = 2

[node name="LastLevelLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Last Level:"
horizontal_alignment = 2

[node name="LastLevelName" type="Label" parent="PanelContainer/MarginContainer/GridContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "LAST LEVEL NAME"

[node name="LevelLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Current Level:"
horizontal_alignment = 2

[node name="LevelName" type="Label" parent="PanelContainer/MarginContainer/GridContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "CURRENT LEVEL NAME"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/GridContainer/MarginContainer2"]
layout_mode = 2
columns = 2

[node name="LastEncounterLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/MarginContainer2/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Last Encounter:"

[node name="LastEncounterName" type="Label" parent="PanelContainer/MarginContainer/GridContainer/MarginContainer2/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "LAST ENCOUNTER NAME"

[node name="EncounterLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/MarginContainer2/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Current Encounter:"

[node name="EncounterName" type="Label" parent="PanelContainer/MarginContainer/GridContainer/MarginContainer2/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "ENCOUNTER NAME"

[connection signal="id_pressed" from="MenuBar/LevelsMenu" to="." method="_on_levels_menu_id_pressed"]
[connection signal="id_pressed" from="MenuBar/EncountersMenu" to="." method="_on_encounters_menu_id_pressed"]
